src/test/deca/context/invalid/ContextSansObjet/OperationsUnaires/MinusFloat_Bool.deca
//Description:
//  Vérification contextuelle du type de sortie non float de l'opérateur unaire -
//Résultat:
//  Erreur contextuelle
//  ligne 8 : type incompatible

{
   boolean x = -3.0;
}